<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp">

    <TextView
        android:id="@+id/title_terms_of_use"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gloriahallelujahregular"
        android:text="@string/title_terms_of_use"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/scroll_view"
        android:gravity="center"/>


    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/checkbox"
        app:layout_constraintTop_toBottomOf="@id/title_terms_of_use">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <!-- Section 1: Acceptance of Terms -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acceptance_of_terms"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/acceptance_of_terms_body"
                android:layout_marginBottom="16dp"
                android:textColor="@color/gray"/>

            <!-- Section 2: User Account -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_account"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_account_body"
                android:layout_marginBottom="16dp"
                android:textColor="@color/gray"/>

            <!-- Section 3: Changes to the Terms -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_terms"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/change_terms_body"
                android:layout_marginBottom="16dp"
                android:textColor="@color/gray"/>
        </LinearLayout>
    </ScrollView>

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/agreed_to_terms"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@id/button_signUp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/scroll_view" />

    <Button
        android:id="@+id/button_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/sign_up"
        android:enabled="true"
        android:background="@drawable/button_border_radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/checkbox" />
</androidx.constraintlayout.widget.ConstraintLayout>
