<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/fragment_create_hush_hush"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.CreateHushHushFragment">

    <!--    title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gloriahallelujahregular"
        android:text="@string/new_hush_hush"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/textView_label_title"/>

    <TextView
        android:id="@+id/textView_label_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/title"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_edit_title"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"/>

    <EditText
        android:id="@+id/create_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:inputType="text"
        android:hint="@string/title"
        android:minHeight="40dp"
        android:background="@drawable/border_radious"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView_label_title"
        app:layout_constraintBottom_toTopOf="@id/textView_label_hush_body"/>

    <TextView
        android:id="@+id/textView_label_hush_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:text="@string/hush_hush"
        android:textColor="@color/gray"
        app:layout_constraintTop_toBottomOf="@id/create_edit_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/create_hush_hush_body"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp" />

    <EditText
        android:id="@+id/create_hush_hush_body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="350dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="10dp"
        android:background="@drawable/border_radious"
        android:hint="@string/type_hush_hush"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="top"
        app:layout_constraintTop_toBottomOf="@id/textView_label_hush_body"
        app:layout_constraintBottom_toTopOf="@id/button_create"/>

    <Button
        android:id="@+id/button_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:background="@drawable/button_border_radius"
        android:text="@string/create"
        app:layout_constraintTop_toBottomOf="@id/create_hush_hush_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>

